Add: Models Classes

--- a/CheckCarsDesktop/Views/ForgotPassword.xaml
+++ b/CheckCarsDesktop/Views/ForgotPassword.xaml
@@ -2,9 +2,9 @@
     x:Class="CheckCarsDesktop.Views.ForgotPassword"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     Title="Recuperación de Contraseña"
     Width="400"
     Height="500"
@@ -12,7 +12,7 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
-        <ViewModels:ForgotPasswordVM/>
+        <ViewModels:ForgotPasswordVM />
     </Window.DataContext>
 
     <Grid>
@@ -68,8 +68,7 @@
                     Background="#f3f3f3"
                     BorderBrush="#dcdcdc"
                     BorderThickness="1"
-                    Text="{Binding Token}"
-                    />
+                    Text="{Binding Token}" />
 
                 <!--  Nueva Contraseña  -->
                 <TextBlock
@@ -84,9 +83,9 @@
                     Margin="0,5"
                     Padding="5"
                     Background="#f3f3f3"
-                   Text="{Binding Password}"
                     BorderBrush="#dcdcdc"
-                    BorderThickness="1" />
+                    BorderThickness="1"
+                    Text="{Binding Password}" />
 
                 <!--  Confirmar Contraseña  -->
                 <TextBlock
@@ -94,7 +93,6 @@
                     Margin="0,5"
                     FontSize="14"
                     Foreground="#666"
-                    
                     Text="Confirmar Contraseña" />
                 <TextBox
                     Grid.Row="12"
@@ -103,9 +101,8 @@
                     Padding="5"
                     Background="#f3f3f3"
                     BorderBrush="#dcdcdc"
-                    BorderThickness="1" 
-                   Text="{Binding ConfirmPassword}"
-                    />
+                    BorderThickness="1"
+                    Text="{Binding ConfirmPassword}" />
 
                 <!--  Botón  -->
                 <Button
@@ -116,10 +113,10 @@
                     HorizontalAlignment="Center"
                     Background="#4CAF50"
                     BorderThickness="0"
+                    Command="{Binding ResetPassword}"
                     Content="Cambiar Contraseña"
                     Cursor="Hand"
                     FontSize="14"
-                    Command="{Binding ResetPassword}"
                     FontWeight="Bold"
                     Foreground="White" />
             </Grid>
