--- a/CheckCarsDesktop/Views/Home.xaml
+++ b/CheckCarsDesktop/Views/Home.xaml
@@ -2,6 +2,7 @@
     x:Class="CheckCarsDesktop.Views.Home"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,6 +10,9 @@
     Width="800"
     Height="600"
     mc:Ignorable="d">
+    <Window.DataContext>
+        <ViewModels:HomeVM />
+    </Window.DataContext>
 
     <Grid>
         <!--  Definición de filas  -->
