--- a/CheckCarsDesktop/Views/ViewEntry.xaml
+++ b/CheckCarsDesktop/Views/ViewEntry.xaml
@@ -3,13 +3,18 @@
     x:Class="CheckCarsDesktop.Views.ViewEntry"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    WindowStartupLocation="CenterScreen"
     Title="Detalles del Reporte de Entrada/Salida"
     Width="600"
     Height="700"
     mc:Ignorable="d">
+    <Window.DataContext>
+        <ViewModels:ViewEntryVM />
+    </Window.DataContext>
     <Grid>
 
         <!--  Título del reporte  -->
@@ -39,36 +44,39 @@
                             Width="150"
                             FontWeight="Bold"
                             Text="ID del Reporte:" />
-                        <TextBox Width="300" IsReadOnly="True" />
+                        <TextBox Width="300" Text="{Binding Report.ReportId}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Autor:" />
-                        <TextBox Width="300" />
+                        <TextBox Width="300" Text="{Binding Report.Author}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Fecha de Creación:" />
-                        <TextBox Width="300" />
+                        <TextBox Width="300" Text="{Binding Report.Created}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Placa del Vehículo:" />
-                        <TextBox Width="300" />
+                        <TextBox Width="300" Text="{Binding Report.CarPlate}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Coordenadas:" />
-                        <TextBox Width="140" Margin="0,0,5,0" />
-                        <TextBox Width="140" />
+                        <TextBox
+                            Width="140"
+                            Margin="0,0,5,0"
+                            Text="{Binding Report.Longitude}" />
+                        <TextBox Width="140" Text="{Binding Report.Latitude}" />
                     </StackPanel>
                 </StackPanel>
 
@@ -81,15 +89,15 @@
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
-                            Text="Kilometraje:" />
-                        <TextBox Width="300" />
+                            Text="Odométro:" />
+                        <TextBox Width="300" Text="{Binding Report.mileage}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Nivel de Combustible:" />
-                        <TextBox Width="300" />
+                        <ProgressBar Width="300"  Value="{Binding Report.FuelLevel}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
@@ -98,30 +106,32 @@
                             Text="Notas:" />
                         <TextBox
                             Width="300"
-                            Height="100"
+                            Height="40"
                             AcceptsReturn="True"
-                            TextWrapping="Wrap" />
+                            TextWrapping="Wrap"
+                            Text="{Binding Report.Notes}"
+                            />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Estado de las Llantas:" />
-                        <TextBox Width="300" />
+                        <TextBox Width="300" Text="{Binding Report.TiresState}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Estado de la Pintura:" />
-                        <TextBox Width="300" />
+                        <TextBox Width="300" Text="{Binding Report.PaintState}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
                             Width="150"
                             FontWeight="Bold"
                             Text="Estado Mecánico:" />
-                        <TextBox Width="300" />
+                        <TextBox Width="300" Text="{Binding Report.MecanicState}" />
                     </StackPanel>
                 </StackPanel>
 
