--- a/CheckCarsDesktop/Views/ViewEntry.xaml
+++ b/CheckCarsDesktop/Views/ViewEntry.xaml
@@ -5,10 +5,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ViewModels="clr-namespace:CheckCarsDesktop.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:gmap="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Detalles del Reporte de Entrada/Salida"
     Width="600"
+    MinWidth="400"
+    MaxWidth="700"
     Height="700"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
@@ -67,17 +70,37 @@
                             Text="Placa del Vehículo:" />
                         <TextBox Width="300" Text="{Binding Report.CarPlate}" />
                     </StackPanel>
-                    <StackPanel Margin="0,5" Orientation="Horizontal">
-                        <TextBlock
-                            Width="150"
-                            FontWeight="Bold"
-                            Text="Coordenadas:" />
-                        <TextBox
-                            Width="140"
-                            Margin="0,0,5,0"
-                            Text="{Binding Report.Longitude}" />
-                        <TextBox Width="140" Text="{Binding Report.Latitude}" />
+
+                    <StackPanel Margin="0,5" Orientation="Vertical">
+                        <StackPanel Margin="0,5" Orientation="Horizontal">
+                            <TextBlock
+                                Width="150"
+                                FontWeight="Bold"
+                                Text="Coordenadas:" />
+                            <TextBox
+                                Width="140"
+                                Margin="0,0,5,0"
+                                Text="{Binding Report.Longitude}" />
+                            <TextBox Width="140" Text="{Binding Report.Latitude}" />
+                        </StackPanel>
+                        <StackPanel Margin="5">
+                            <gmap:GMapControl
+                                Name="mapControl"
+                                Width="auto"
+                                Height="300"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                CanDragMap="False"
+                                MapProvider="{Binding MapProvider}"
+                                MaxZoom="20"
+                               Zoom="15"
+                                MinZoom="00"
+                                Position="{Binding Ubication}"
+                                 />
+                        </StackPanel>
+
                     </StackPanel>
+
                 </StackPanel>
 
                 <!--  Detalles específicos del EntryExitReport  -->
@@ -90,7 +113,7 @@
                             Width="150"
                             FontWeight="Bold"
                             Text="Odométro:" />
-                        <TextBox Width="300" Text="{Binding Report.mileage}" />
+                        <TextBox Width="300" Text="{Binding Report.mileage, StringFormat='{}{0:N0} km'}" />
                     </StackPanel>
                     <StackPanel Margin="0,5" Orientation="Horizontal">
                         <TextBlock
