--- a/CheckCarsDesktop/Views/ViewCrash.xaml
+++ b/CheckCarsDesktop/Views/ViewCrash.xaml
@@ -6,13 +6,150 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CheckCarsDesktop.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    WindowStartupLocation="CenterScreen"
     Title="ViewCrash"
     Width="800"
     Height="450"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
     <Window.DataContext>
-        <ViewModels:ViewCrashVM/>
+        <ViewModels:ViewCrashVM />
     </Window.DataContext>
+    <Grid>
+        <!--  Título del reporte  -->
+        <TextBlock
+            Margin="025,0,25,25"
+            HorizontalAlignment="Center"
+            FontSize="20"
+            FontWeight="Bold"
+            Text="Detalles del Reporte de Choque" />
+        <ScrollViewer Margin="0,30,0,0">
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <!--  Información básica del reporte  -->
+                <StackPanel
+                    Grid.Row="0"
+                    Margin="0,0,0,20"
+                    Orientation="Vertical">
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="ID del Reporte:" />
+                        <TextBox Width="300" Text="{Binding Report.ReportId}" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="Autor:" />
+                        <TextBox Width="300" Text="{Binding Report.Author}" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="Fecha de Creación:" />
+                        <TextBox Width="300" Text="{Binding Report.Created}" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="Placa del Vehículo:" />
+                        <TextBox Width="300" Text="{Binding Report.CarPlate}" />
+                    </StackPanel>
+
+                    <StackPanel Margin="0,5" Orientation="Vertical">
+                        <StackPanel Margin="0,5" Orientation="Horizontal">
+                            <TextBlock
+                                Width="150"
+                                FontWeight="Bold"
+                                Text="Coordenadas:" />
+                            <TextBox
+                                Width="140"
+                                Margin="0,0,5,0"
+                                Text="{Binding Report.Longitude}" />
+                            <TextBox Width="140" Text="{Binding Report.Latitude}" />
+                        </StackPanel>
+                        <StackPanel Margin="5" />
+                    </StackPanel>
+                </StackPanel>
+
+                <StackPanel
+                    Grid.Row="1"
+                    Margin="0,0,0,20"
+                    Orientation="Vertical">
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="Localización" />
+                        <TextBox Width="300" Text="{Binding Report.Location}" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="Detalles del Choque:" />
+                        <TextBox
+                            Width="300"
+                            Height="40"
+                            AcceptsReturn="True"
+                            Text="{Binding Report.CrashDetails}"
+                            TextWrapping="Wrap" />
+                    </StackPanel>
+                    <StackPanel Margin="0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="150"
+                            FontWeight="Bold"
+                            Text="Daños:" />
+                        <TextBox
+                            Width="300"
+                            Height="40"
+                            AcceptsReturn="True"
+                            Text="{Binding Report.CrashedParts}"
+                            TextWrapping="Wrap" />
+                    </StackPanel>
+
+                </StackPanel>
+
+                <!--  Imágenes relacionadas con el reporte  -->
+                <GroupBox
+                    Grid.Row="2"
+                    Margin="0,20,0,0"
+                    Header="Imágenes del Reporte">
+                    <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                        <WrapPanel
+                            Margin="10"
+                            ItemHeight="auto"
+                            ItemWidth="auto">
+                            <!--  Repite un control Image por cada foto  -->
+                            <ItemsControl ItemsSource="{Binding Report.Photos}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Image
+                                            Width="auto"
+                                            Height="800"
+                                            Cursor="Hand"
+                                            Source="{Binding FilePath}"
+                                            Stretch="UniformToFill">
+                                            <Image.ToolTip>
+                                                <TextBlock Text="{Binding FileName}" />
+                                            </Image.ToolTip>
+                                        </Image>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </WrapPanel>
+                    </ScrollViewer>
+                </GroupBox>
+            </Grid>
+        </ScrollViewer>
+    </Grid>
+
 </Window>
